# gnosis_vpn-app

./: .gitignore  AGENTS.md  DECENTRALIZED_FEATURES.md  README.md  continuationprompt  deno.json  flake.nix  index.html  package-lock.json  package.json  renovate.json  tsconfig.json  vite.config.ts
.claude/skills/run-gnosis-vpn-app/: SKILL.md  driver.ts  fixture.json  shim.js
.github/: CODEOWNERS  PULL_REQUEST_TEMPLATE.md  copilot-instructions.md  copilot.yml  renovate.json
.github/actions/harden-runner-linux/: action.yml
.github/actions/harden-runner-macos/: action.yml
.github/workflows/: build-binaries.yaml  build.yml  cleanup-releases.yml  merge.yaml  release.yaml  security-audit.yml  test-release.yaml
installer/: .gitignore  Distribution.xml  ENV_VARIABLES.md  README.md  build-package.sh  build-pkg.sh  sign-pkg.sh  test-installer.sh  uninstall.sh
installer/resources/: conclusion.html  readme.html  welcome.html
installer/resources/artifacts/: wg-aarch64-darwin
installer/resources/config/: README.md
installer/resources/scripts/: installationCheck.js  logging.sh  manage-installation.sh  postflight  postinstall  preinstall
scripts/: derive-tray-icons.py  generate-icons.sh
src/: .prettierrc  App.css  App.tsx  index.css  index.tsx
src-tauri/: Cargo.toml  tauri.conf.json
src-tauri/capabilities/: default.json
src-tauri/icons/: icon.icns
src-tauri/src/: commands.rs  icons.rs  lib.rs  main.rs  settings.rs  theme.rs  tray.rs  types.rs  update_install.rs
src-tauri/src/platform/: common.rs  linux.rs  macos.rs  mod.rs
src-tauri/tests/: serialize_fixtures.rs
src-tauri/tests/fixtures/: linux-amd64.json
src/components/: ActionButton.tsx  AddFundsModal.tsx  AirdropClaim.tsx  AirdropClaimBanner.tsx  AirdropClaimButton.tsx  BalancePopup.tsx  ChannelDashboard.tsx  CheckUpdateModal.tsx  ConnectButton.tsx  ExitHealthBadge.tsx  ExitHealthDetail.tsx  ExitNode.tsx  ExitNodeWarning.tsx  ExportLogs.tsx  Flag.tsx  FundingAddress.tsx  FundsInfo.tsx  FundsInfoSkeleton.tsx  Help.tsx  HopsIcon.tsx  InstallUpdateModal.tsx  LogsPanel.tsx  Navigation.tsx  NodeHealth.tsx  NodeStatus.tsx  PathVisualization.tsx  QrCode.tsx  SettingsPanel.tsx  Spinner.tsx  SpinnerBig.tsx  StatusHero.tsx  StatusIndicator.tsx  StatusLine.tsx
src/components/address/: FundingAddress.tsx  QrCode.tsx
src/components/common/: Banner.tsx  Button.tsx  ChannelSelector.tsx  Checkbox.tsx  ChevronIcon.tsx  Dropdown.tsx  HowToUpdateModal.tsx  IconButton.tsx  Markdown.test.ts  Markdown.tsx  Modal.tsx  SecondaryScreen.tsx  SegmentedControl.tsx  SegmentedControlSwicher.tsx  SegmentedControlSwitcher.tsx  Spinner.tsx  TabLabel.tsx  Tabs.tsx  Tag.tsx  ThemeSelector.tsx  Toggle.tsx  Tooltip.tsx  UpdateStatusCard.tsx  WarningIcon.tsx
src/components/exitNode/: ExitHealthBadge.tsx  ExitHealthDetail.tsx  ExitNode.tsx  ExitNodeCard.tsx  ExitNodeList.tsx  ExitNodeStatusTags.tsx  HopsIcon.tsx  Stat.tsx  SwitchConfirmDialog.tsx  UnreachableDialog.tsx
src/components/icons/: UpdateIcon.tsx  WarningIcon.tsx
src/components/onboarding/: Airdrop.tsx  Complete.tsx  Manually.tsx  Start.tsx  Synchronization.tsx
src/components/status/: ConnectionStatus.tsx  StatusHero.tsx  StatusIndicator.tsx  StatusLine.tsx
src/screens/: GlobalSettings.tsx  Logs.tsx  MainScreen.tsx  Onboarding.tsx  Settings.tsx  Usage.tsx
src/screens/main/: Initialization.tsx  MainScreen.tsx  Onboarding.tsx  Synchronization.tsx
src/screens/settings/: Logs.tsx  Settings.tsx  Updates.tsx  Usage.tsx
src/services/: index.ts  updateInstall.test.ts  updateInstall.ts  vpnService.test.ts  vpnService.ts
src/stores/: appContext.tsx  appStore.ts  appStore.tsx  logsStore.ts  nodeAnalyticsStore.ts  settingsStore.test.ts  settingsStore.ts
src/types/: index.ts
src/utils/: address.ts  compatibility.ts  credit.test.ts  credit.ts  destinations.test.ts  destinations.ts  exitHealth.test.ts  exitHealth.ts  explorerUrl.ts  fromWeiToFixed_test.ts  funding.ts  hopli.test.ts  hopli.ts  platform.ts  settingsWindow.ts  shortAddress.ts  status.test.ts  status.ts  units.ts  updateAvailability.test.ts  updateAvailability.ts  updateChecker.ts  version.test.ts  version.ts  wei.test.ts  wei.ts
src/windows/: App.tsx  SettingsWindow.tsx
(+32 files in other folders)
