[package]
name = "gnosis_vpn-app"
version = "0.2.4"
description = "Gnosis VPN UI Application"
authors = ["HOPR"]
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[lib]
# The `_lib` suffix may seem redundant but it is necessary
# to make the lib name unique and wouldn't conflict with the bin name.
# This seems to be only an issue on Windows, see https://github.com/rust-lang/cargo/issues/8519
name = "gnosis_vpn_app_lib"
crate-type = ["staticlib", "cdylib", "rlib"]

[build-dependencies]
tauri-build = { version = "2.5.0", features = [] }

[dependencies]
gnosis_vpn-lib = { git = "https://github.com/gnosis/gnosis_vpn-client.git", rev = "3518bc91fb5f8a28b201c7e06b10da5101df8f17" }
liblzma = { version = "0.4.5", default-features = false, features = ["static"] }
serde = { version = "1.0.228", features = ["derive"] }
serde_json = "1.0.145"
tauri = { version = "2.9.0", features = ["tray-icon", "image-png"] }
tauri-plugin-opener = "2.5.0"
tauri-plugin-store = "2.4.0"
