[package]
name = "gnosis_vpn-app"
version = "0.25.1"
description = "Gnosis VPN UI Application"
authors = ["HOPR"]
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

# objc 0.2's msg_send! macro uses cfg(feature = "cargo-clippy") which triggers unexpected_cfgs
[lints.rust.unexpected_cfgs]
level = "warn"
check-cfg = ['cfg(feature, values("cargo-clippy"))']

[lib]
# The `_lib` suffix may seem redundant but it is necessary
# to make the lib name unique and wouldn't conflict with the bin name.
# This seems to be only an issue on Windows, see https://github.com/rust-lang/cargo/issues/8519
name = "gnosis_vpn_app_lib"
crate-type = ["staticlib", "cdylib", "rlib"]

[build-dependencies]
tauri-build = { version = "2.5.3", features = [] }

[dependencies]
# gnosis_vpn-lib = { path = "../../gnosis_vpn-client/gnosis_vpn-lib" }
gnosis_vpn-lib = { git = "https://github.com/gnosis/gnosis_vpn-client.git", rev = "601374f2f03eb5b82a784cd4e8991e3452980d2c" }
liblzma = { version = "0.4.5", default-features = false, features = ["static"] }
serde = { version = "1.0.228", features = ["derive"] }
serde_json = "1.0.149"
tauri = { version = "2.9.5", features = ["tray-icon", "image-png"] }
tauri-plugin-single-instance = "2.4.0"
tauri-plugin-opener = "2.5.3"
tauri-plugin-store = "2.4.0"
tauri-plugin-dialog = "2.6.0"
dark-light = "2.0"
tokio = { version = "1.50.0", features = ["time", "rt", "sync"] }
tokio-util = { version = "0.7.17", features = ["rt"] }
zstd = "0.13.3"

[target.'cfg(target_os = "linux")'.dependencies]
ashpd = { version = "0.10", default-features = false }
futures-core = { version = "0.3", default-features = false }

[target.'cfg(target_os = "macos")'.dependencies]
cocoa = "0.26"
objc = "0.2"
dispatch = "0.2"
